# level_editor

./: .gitignore  CMakeLists.txt  DetailArea.qml  Header.qml  InputModel.cpp  InputModel.h  LevelArea.qml  LevelModel.cpp  LevelModel.h  LevelsEditor.qml  LevelsModel.cpp  LevelsModel.h  LoaderSaver.qml  README.txt  TypesArea.qml  TypesModel.cpp  TypesModel.h  TypesTable.qml  main.cpp  main.qml  model.cpp  model.h  qml.qrc
examples/: level_example.xml
examples/types_config/: items_schema.xsd
libs/parser/: CMakeLists.txt  general.cpp  general.h  items_model.cpp  items_model.cpp.autosave  items_model.h  level_example.xml  main.cpp
